starCatalogueUpdate